--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,16 @@
   line-height: 1.5;
   font-weight: 400;
 
+  background-color: #f8f9fa;
+  color: #11181b;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
